--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-use-cart": "^1.14.0",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "@types/node": "^20",
