--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/md5": "^2.3.5",
+    "chart.js": "^4.4.4",
+    "dayjs": "^1.11.13",
     "firebase": "^10.12.3",
     "md5": "^2.3.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-use-cart": "^1.14.0",
