--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-use-cart": "^1.14.0",
